# src/main/kotlin/com/basicsteps/multipos/config/EventBusHandlerChannels.kt
@@ -1,8 +1,0 @@
-package com.basicsteps.multipos.config
-
-enum class EventBusHandlerChannels(val channel: String) {
-    SIGN_UP("signUp"),
-    SIGN_IN("signIn"),
-    CONFIRM_ACCESS_CODE("confirmAccessCode"),
-    IS_EMAIL_UNIQUE("isEmailUnique")
-}
