# src/main/resources/api.yaml
@@ -1,14 +1,16 @@
 openapi: '3.0.0'
+
 info:
   version: 1.0.0
   title: Swagger Petstore
   license:
     name: MIT
+
 paths:
-  /signUp:
+  /api/v1/sign-up:
       post:
         summary: sign up end point
-        operationId: signUp
+        operationId: sign-up
         tags:
           - sign up
           - registration
@@ -36,10 +38,13 @@ paths:
               application/json:
                 schema:
                   $ref: "#/components/schemas/Pet"
-  /signIn:
+
+
+
+  /api/v1/sign-in:
         post:
           summary: sign up end point
-          operationId: signIn
+          operationId: sign-in
           tags:
             - sign up
             - registration
@@ -67,10 +72,10 @@ paths:
                 application/json:
                   schema:
                     $ref: "#/components/schemas/Pet"
-  /confirmAccessCode:
+  /api/v1/confirm-access-code:
         post:
           summary: confirmAccessCode
-          operationId: confirmAccessCode
+          operationId: confirm-access-code
           tags:
             - sign up
             - registration
@@ -98,10 +103,10 @@ paths:
                 application/json:
                   schema:
                     $ref: "#/components/schemas/Pet"
-  /checkEmail:
+  /api/v1/check-email:
           post:
             summary: checkEmail
-            operationId: checkEmail
+            operationId: check-email
             tags:
               - sign up
               - registration
@@ -129,6 +134,69 @@ paths:
                   application/json:
                     schema:
                       $ref: "#/components/schemas/Pet"
+  /api/v1/get-access-code:
+            post:
+              summary: checkEmail
+              operationId: get-access-code
+              tags:
+                - sign up
+                - registration
+              parameters:
+                - name: signUpObject
+                  in: query
+                  description: How many items to return at one time (max 100)
+                  required: false
+                  schema:
+                    type: integer
+
+              responses:
+                '200':
+                  description: An paged array of pets
+                  content:
+                    application/json:
+                      schema:
+                        $ref: "#/components/schemas/Pet"
+                '400':
+                  description:
+
+                default:
+                  description: unexpected error
+                  content:
+                    application/json:
+                      schema:
+                        $ref: "#/components/schemas/Pet"
+  /api/v1/protected/verification:
+              post:
+                summary: checkEmail
+                operationId: verification
+                tags:
+                  - sign up
+                  - registration
+                parameters:
+                  - name: signUpObject
+                    in: query
+                    description: How many items to return at one time (max 100)
+                    required: false
+                    schema:
+                      type: integer
+
+                responses:
+                  '200':
+                    description: An paged array of pets
+                    content:
+                      application/json:
+                        schema:
+                          $ref: "#/components/schemas/Pet"
+                  '400':
+                    description:
+
+                  default:
+                    description: unexpected error
+                    content:
+                      application/json:
+                        schema:
+                          $ref: "#/components/schemas/Pet"
+
 components:
   schemas:
     Pet:
